add metrics prom endpoint
