# service/DatosService.js
@@ -2,6 +2,7 @@
 
 const fs = require('fs');
 const path = require('path');
+const Prometheus = require('prom-client');
 
 /**
  * Cargar archivo
@@ -83,3 +84,14 @@ exports.guardarArchivo = function(body,ubicacion) {
   });
 }
 
+
+/**
+ * getMetrics
+ * Endpoint to retrieve Prometheus metrics
+ * @returns {Promise} Promise object represents the handling of the metrics endpoint
+ **/
+exports.getMetrics = function() {
+  return new Promise(function(resolve, reject) {
+    resolve(Prometheus.register.metrics())
+  });
+};
